--- a/base/static/base/collection.css
+++ b/base/static/base/collection.css
@@ -70,16 +70,20 @@ body {
 .music_block {
     position: relative;
     margin-left: 35px;
-    height: 60px;
+    height: 50px;
     display: flex;
     flex-direction: row;
+    transition: 0.3s;
+    border-radius: 4px;
+    align-items: center;
 }
 .musindex {
     position: relative;
-    width: 50px;
+    width: 54px;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 600;
+    aspect-ratio: 1/1;
     transition: all 0.3s;
 }
 .playmusbtn {
@@ -95,6 +99,10 @@ body {
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(305deg) brightness(103%) contrast(101%);
 
 }
+.playmusbtn img {
+    width: 22px;
+    aspect-ratio: 1/1;
+}
 .music_block:hover .playmusbtn{
     visibility: visible;
     opacity: 1;
@@ -102,6 +110,11 @@ body {
 .music_block:hover .musindex > p {
 
     opacity: 0;
+}
+@media only screen and (min-width: 700px) {
+    .music_block:hover {
+        background-color: rgba(255, 255, 255, 0.066);
+    }
 }
 .playmusbtn_img {
     margin-top: 10px;
@@ -113,37 +126,44 @@ i.collection_btn {
     font-size: 60px;
 }
 .thumnail {
-    width: 54px;
-    height: 54px;
+    height: 44px;
     margin-right: 14px;
+    aspect-ratio: 1/1;
 }
 .music_name {
-    font-weight: 600;
+    font-weight: 500;
 }
 #playlist_info_authors {
     margin: 0;
     margin-top: 8px;
-    font-size: 16px;
-    font-weight: 600;
+    font-size: 14px;
+    color: rgb(207, 207, 207);
 }
 .music_name, .music_author {
-    font-size: 20px;
+    cursor: pointer;
+    font-size: 16px;
     margin: 0;
+}
+.music_name:hover {
+    text-decoration-line: underline;
+    
+}
+.music_author:hover {
+    text-decoration-line: underline;
 }
 .music_author {
     margin-top: 5px;
 }
 
 #author_block {
-    height: 80px;
     display: flex;
     flex-direction: row;
     column-gap: 14px;
 }
 #author_img {
     margin-left: 14px;
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
     background-color: black;
 }
@@ -179,7 +199,15 @@ i.collection_btn {
     align-items: center;
     height: 100%;
     right: 14px;
+    transition: 0.2s;
 }
+.actionbtncollection img {
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(330deg) brightness(106%) contrast(104%);
+}
+.music_block:hover .actionbtncollection {
+    opacity: 1;
+}
+
 @media only screen and (max-device-width: 700px) {
     #info_container {
         flex-direction: column;
@@ -221,7 +249,7 @@ i.collection_btn {
         display: none;
     }
     #playlist_info_name {
-        font-size: 30px;
+        font-size: 20px;
     }
     #playlist_img {
         height: 240px;
@@ -235,8 +263,8 @@ i.collection_btn {
         position: absolute;
     }
     .thumnail {
-        width: 60px;
-        height: 60px;
+        width: 54px;
+        height: 54px;
     }
     .musindexnum {
         display: none;
@@ -253,4 +281,32 @@ i.collection_btn {
         width: 40px;
         height: 40px;
     }
+}
+
+.liked-btn-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 60px;
+    height: 100%;
+    transition: 0.2s;
+}
+.liked-btn-block img {
+    width: 30px;
+    height: 30px;
+}
+#follow-btn  p {
+    cursor: pointer;
+    padding: 10px 20px;
+    border: solid 2px black;
+    border-radius: 4px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    transition: 0.3s;
+    font-size: 14px;
+}
+#follow-btn  p:hover {
+    border: solid 2px rgb(255, 255, 255);
+    /* background-color: rgba(255, 255, 255, 0.221); */
 }
