--- a/base/static/base/editcontent.css
+++ b/base/static/base/editcontent.css
@@ -83,8 +83,8 @@
     align-items: center;
 }
 #edit_img > div{
-    height: 200px;
-    width: 180px;
+    height: 180px;
+    aspect-ratio: 1/1;
 }
 #edit_container {
     text-align: center;
@@ -131,7 +131,7 @@
 }
 .editactbtn > div > p {
     margin: 0;
-    font-size: 20px;
+    font-size: 18px;
     white-space: nowrap;
 }
 
