--- a/base/static/base/library.css
+++ b/base/static/base/library.css
@@ -1,5 +1,5 @@
 .section_block_library {
-    grid-template-columns: repeat(6, minmax(155px, 180px));
+    grid-template-columns: repeat(auto-fill, minmax(155px, 180px));
     grid-template-rows: repeat(1, auto);
     height: auto;;
 }
@@ -18,8 +18,8 @@
 }
 .cre-play-tbn {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 10px;
+    top: 10px;
     width: 40px;
     height: 40px;
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(305deg) brightness(103%) contrast(101%);
@@ -40,9 +40,37 @@
     }
 }
 
+
+
+.collection-list {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+    margin-left: 20px;
+}
+
+.collection-list div p {
+    margin: 0;
+    font-size: 17px;
+    padding: 6px 6px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.collection-list div p:hover {
+    background-color: rgb(127, 76, 255);
+}
 @media only screen and (max-device-width: 700px) {
     .section_block_library {
         row-gap: 5px;
     column-gap: 5px;
+    }
+    .collection-list{
+        padding-top: 20px;
+    }
+    .collection-list div p {
+        font-size: 16px;
+    }
+    .container_block_collection {
+        padding-top: 0;
     }
 }
