--- a/base/static/base/search.css
+++ b/base/static/base/search.css
@@ -19,6 +19,7 @@
 @media only screen and (max-device-width: 700px) {
 #root_top_bar {
     display: none;
+    height: fit-content;
 }
 }
 
@@ -46,8 +47,17 @@
 .type-btn > p {
     font-weight: 600;
 }
-.songs_list {
+.song_list {
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 4px;
+}
+.song_list  .music_block .thumnail {
+    width: 54px;
+    height: 54px;
+}
+.music_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
