--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+        <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="{% static 'appicons/icon-512x512.png' %}">
         <link rel="manifest" href="{% static 'base/js/manifest.json' %}">
         <link rel="stylesheet" href="{% static 'base/home.css' %}">
         <link rel="stylesheet" href="{% static 'base/player_bar.css' %}">
@@ -19,6 +20,7 @@
         <link rel="stylesheet" href="{% static 'base/search.css' %}">
         <link rel="stylesheet" href="{% static 'base/ReactModalPortal.css' %}">
         <link rel="stylesheet" href="{% static 'base/editcontent.css' %}">
+        <link rel="stylesheet" href="{% static 'base/message.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -29,6 +31,16 @@
             <div id='submain'>
                 <div id='root_top_bar'>
                         <div class='root_top_bar_container'>
+                            <div class='history-navigation'>
+                                <div class='go-btn' id='go-back'>
+                                    <div class='btn-container'></div>
+                                    <img src="{% static 'base/icons/arrow.svg' %}" alt="">
+                                </div>
+                                <div class='go-btn' id='go-forward'>
+                                    <div class='btn-container'></div>
+                                    <img src="{% static 'base/icons/arrow.svg' %}" alt="">
+                                </div>
+                            </div>
                             <div class='home_page_link'>
                                 <img src="{% static 'base/icons/home.svg' %}" alt="">
                             </div>
@@ -37,7 +49,7 @@
                             <input type="text" name='q'  autocomplete="off" id='searchinput'>
                             </div>
                         </div>
-                    <div id='user_icon'></div>
+                   
                 </div>
                 <div id='main_container'>
                     <div id='nav_bar' class='hidden-nav-bar'>
@@ -65,102 +77,7 @@
                     <div id='view_container'>
                         <div id='view_container_content'>
                             {% block content %}
-                            <div class='container_block container_block_1'>
-                                <div class='block_name'><h1>Good Afternoon</h1></div>
-                                <div id='recently_played_playlists' class='section_block section_block_media'>
-                                    {% for playlist in playlists %}
-                                        <div class="played_playlist_block name_playlist_block" data-id={{playlist.uni_id}}>
-                                            <div class='img_container_block'>
-                                                <img src="{{playlist.thumnail.url}}" class='img_container_block' alt="">
-                                            </div>
-                                            <div class='playlist_name'><p>{{playlist.name}}</p></div>
-                                            <div class='playbtn_block' data-id="{{playlist.uni_id}}">
-                                                <i class="fa fa-play-circle fa-5x playbtn_block_icon" width='40px' height='40px'></i>
-                                            </div>
-                                        </div>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                            <div class='container_block'>
-                                <div class='block_name'><h1>Made For You</h1></div>
-                                <div id='suggested_played_playlists' class='section_block section_block_other'>
-                                    <div class="suggested_playlist_block name_playlist_block">
-                                        <div class='block_info'>
-                                            <div class='img_container_block_other'>
-                                                <img src="/media/images/photo_2022-08-24_01-12-05_lyHjP44.jpg" class='img_container_block_other' alt="">
-                                                <div class='other_block_btn' data-id="{{playlist.uni_id}}">
-                                                    <i class="fa fa-play-circle fa-5x playbtn_block_icon" width='40px' height='40px'></i>
-                                                </div>
-                                            </div>
-                                            <div class='bla_bla'>
-                                                 <p>bla_bla</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="suggested_playlist_block name_playlist_block">
-                                        <div class='block_info'>
-                                            <div class='img_container_block_other'>
-                                                <img src="/media/images/photo_2022-08-24_01-12-05_lyHjP44.jpg" class='img_container_block_other' alt="">
-                                            </div>
-                                            <div class='bla_bla'>
-                                                 <p>bla_bla</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="suggested_playlist_block name_playlist_block">
-                                        <div class='block_info'>
-                                            <div class='img_container_block_other'>
-                                                <img src="/media/images/photo_2022-08-24_01-12-05_lyHjP44.jpg" class='img_container_block_other' alt="">
-                                            </div>
-                                            <div class='bla_bla'>
-                                                 <p>bla_bla</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="suggested_playlist_block name_playlist_block">
-                                        <div class='block_info'>
-                                            <div class='img_container_block_other'>
-                                                <img src="/media/images/photo_2022-08-24_01-12-05_lyHjP44.jpg" class='img_container_block_other' alt="">
-                                            </div>
-                                            <div class='bla_bla'>
-                                                 <p>bla_bla</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="suggested_playlist_block name_playlist_block">
-                                        <div class='block_info'>
-                                            <div class='img_container_block_other'>
-                                                <img src="/media/images/photo_2022-08-24_01-12-05_lyHjP44.jpg" class='img_container_block_other' alt="">
-                                            </div>
-                                            <div class='bla_bla'>
-                                                 <p>bla_bla</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="suggested_playlist_block name_playlist_block">
-                                        <div class='block_info'>
-                                            <div class='img_container_block_other'>
-                                                <img src="/media/images/photo_2022-08-24_01-12-05_lyHjP44.jpg" class='img_container_block_other' alt="">
-                                            </div>
-                                            <div class='bla_bla'>
-                                                 <p>bla_bla</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-                                </div>
-                            </div>
-                            <div class='container_block'>
-                                <div class='block_name'><h1>Based on recent listening</h1></div>
-                                <div id='based_played_playlists' class='section_block section_block_other'>
-                                    <div class="based_played_playlists name_playlist_block"></div>
-                                    <div class="based_played_playlists name_playlist_block"></div>
-                                    <div class="based_played_playlists name_playlist_block"></div>
-                                    <div class="based_played_playlists name_playlist_block"></div>
-                                    <div class="based_played_playlists name_playlist_block"></div>
-                                    <div class="based_played_playlists name_playlist_block"></div>
-                                </div>
-                            </div>
+                            
                             {% endblock content %}
                         </div>
                     </div>
@@ -370,9 +287,11 @@
             
             </div>
         </div>
-        
-        <script src="{% static 'base/js/main.js' %}"></script>
         <script src="{% static 'base/js/script.js' %}"></script>
+        <script src="{% static 'base/js/sw.js' %}"></script>
+        <script src="{% static 'base/js/orientation.js' %}"></script>
+
+
         <script src="" async defer></script>
         
     </body>
