Final commit (maybe)

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="{% static 'appicons/icon-512x512.png' %}">
         <link rel="manifest" href="{% static 'base/js/manifest.json' %}">
+        <link rel="stylesheet" href="{% static 'base/message.css' %}">
         <link rel="stylesheet" href="{% static 'base/home.css' %}">
         <link rel="stylesheet" href="{% static 'base/player_bar.css' %}">
         <link rel="stylesheet" href="{% static 'base/collection.css' %}">
@@ -20,7 +21,7 @@
         <link rel="stylesheet" href="{% static 'base/search.css' %}">
         <link rel="stylesheet" href="{% static 'base/ReactModalPortal.css' %}">
         <link rel="stylesheet" href="{% static 'base/editcontent.css' %}">
-        <link rel="stylesheet" href="{% static 'base/message.css' %}">
+        <link rel="stylesheet" href="{% static 'base/collection.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
