--- a/base/static/base/editcontent.css
+++ b/base/static/base/editcontent.css
@@ -41,6 +41,7 @@
     height: 100%;
 }
 .playlist-block-add-info {
+    font-size: 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
